{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 16,
  "lineage": "bca3adc3-071d-0dc5-dd9d-0a5399ec3709",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "right_way",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:912611140120:listener/app/lb-right-way/d7af2d0e2577f319/c2c1b1d274e52a78",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:912611140120:targetgroup/tg-right-way/7029f7ee0ed6f6a3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:912611140120:listener/app/lb-right-way/d7af2d0e2577f319/c2c1b1d274e52a78",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:912611140120:loadbalancer/app/lb-right-way/d7af2d0e2577f319",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_lb.lb_right_way",
            "module.compute.aws_lb_target_group.right_way",
            "module.compute.aws_security_group.http_port",
            "module.network.aws_internet_gateway.IG_right_way",
            "module.network.aws_subnet.public_subnet_right_way",
            "module.network.aws_vpc.vpc_right_way"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "att_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:912611140120:targetgroup/tg-right-way/7029f7ee0ed6f6a3-20220803101142368600000002",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:912611140120:targetgroup/tg-right-way/7029f7ee0ed6f6a3",
            "target_id": "i-0fb89db3ad6a957e0"
          },
          "dependencies": [
            "module.compute.aws_instance.ec2-right_way",
            "module.compute.aws_lb_target_group.right_way",
            "module.compute.aws_security_group.http_port",
            "module.network.aws_internet_gateway.IG_right_way",
            "module.network.aws_subnet.public_subnet_right_way",
            "module.network.aws_vpc.vpc_right_way"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:912611140120:targetgroup/tg-right-way/7029f7ee0ed6f6a3-20220803101142046200000001",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:912611140120:targetgroup/tg-right-way/7029f7ee0ed6f6a3",
            "target_id": "i-0efce1d4b1dc83695"
          },
          "dependencies": [
            "module.compute.aws_instance.ec2-right_way",
            "module.compute.aws_lb_target_group.right_way",
            "module.compute.aws_security_group.http_port",
            "module.network.aws_internet_gateway.IG_right_way",
            "module.network.aws_subnet.public_subnet_right_way",
            "module.network.aws_vpc.vpc_right_way"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-right_way",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cea098ed2ac54925",
            "arn": "arn:aws:ec2:us-west-2:912611140120:instance/i-0fb89db3ad6a957e0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb89db3ad6a957e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a2227af726139eb7",
            "private_dns": "ip-10-0-0-12.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.12",
            "public_dns": "ec2-54-191-150-197.us-west-2.compute.amazonaws.com",
            "public_ip": "54.191.150.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a9064de5d0fc5708",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00afb99173ca3cb0b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed0dc083a6d279f6",
            "tags": {
              "Name": "ec2-right_way-1"
            },
            "tags_all": {
              "Name": "ec2-right_way-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00afb99173ca3cb0b"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.http_port",
            "module.network.aws_internet_gateway.IG_right_way",
            "module.network.aws_subnet.public_subnet_right_way",
            "module.network.aws_vpc.vpc_right_way"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cea098ed2ac54925",
            "arn": "arn:aws:ec2:us-west-2:912611140120:instance/i-0efce1d4b1dc83695",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0efce1d4b1dc83695",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d02a26e5c062e9c8",
            "private_dns": "ip-10-0-1-75.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.75",
            "public_dns": "ec2-35-166-120-61.us-west-2.compute.amazonaws.com",
            "public_ip": "35.166.120.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08620b4e30bb683e5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00afb99173ca3cb0b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0209ea1f811630dee",
            "tags": {
              "Name": "ec2-right_way-2"
            },
            "tags_all": {
              "Name": "ec2-right_way-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00afb99173ca3cb0b"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.http_port",
            "module.network.aws_internet_gateway.IG_right_way",
            "module.network.aws_subnet.public_subnet_right_way",
            "module.network.aws_vpc.vpc_right_way"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_right_way",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:912611140120:loadbalancer/app/lb-right-way/d7af2d0e2577f319",
            "arn_suffix": "app/lb-right-way/d7af2d0e2577f319",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-right-way-315714347.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:912611140120:loadbalancer/app/lb-right-way/d7af2d0e2577f319",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-right-way",
            "security_groups": [
              "sg-00afb99173ca3cb0b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0209ea1f811630dee"
              },
              {
                "subnet_id": "subnet-0ed0dc083a6d279f6"
              }
            ],
            "subnets": [
              "subnet-0209ea1f811630dee",
              "subnet-0ed0dc083a6d279f6"
            ],
            "vpc_id": "vpc-03fa2e6b78d3211af",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.compute.aws_security_group.http_port",
            "module.network.aws_internet_gateway.IG_right_way",
            "module.network.aws_subnet.public_subnet_right_way",
            "module.network.aws_vpc.vpc_right_way"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "right_way",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:912611140120:targetgroup/tg-right-way/7029f7ee0ed6f6a3",
            "arn_suffix": "targetgroup/tg-right-way/7029f7ee0ed6f6a3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:912611140120:targetgroup/tg-right-way/7029f7ee0ed6f6a3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-right-way",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03fa2e6b78d3211af"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_right_way"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:912611140120:security-group/sg-00afb99173ca3cb0b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00afb99173ca3cb0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_port",
            "name_prefix": "",
            "owner_id": "912611140120",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03fa2e6b78d3211af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_right_way"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IG_right_way",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:912611140120:internet-gateway/igw-0c1a9c6f17b5ee4c9",
            "id": "igw-0c1a9c6f17b5ee4c9",
            "owner_id": "912611140120",
            "tags": {
              "Name": "internet gateway"
            },
            "tags_all": {
              "Name": "internet gateway"
            },
            "vpc_id": "vpc-03fa2e6b78d3211af"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_right_way"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_right_way",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:912611140120:route-table/rtb-07f8bc69a5bc639bf",
            "id": "rtb-07f8bc69a5bc639bf",
            "owner_id": "912611140120",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c1a9c6f17b5ee4c9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Names": "route-table-right_way"
            },
            "tags_all": {
              "Names": "route-table-right_way"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fa2e6b78d3211af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.IG_right_way",
            "module.network.aws_vpc.vpc_right_way"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_right_way",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c45120c0710858fa",
            "route_table_id": "rtb-07f8bc69a5bc639bf",
            "subnet_id": "subnet-0ed0dc083a6d279f6"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.IG_right_way",
            "module.network.aws_route_table.route_table_right_way",
            "module.network.aws_subnet.public_subnet_right_way",
            "module.network.aws_vpc.vpc_right_way"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0641e13851a760906",
            "route_table_id": "rtb-07f8bc69a5bc639bf",
            "subnet_id": "subnet-0209ea1f811630dee"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.IG_right_way",
            "module.network.aws_route_table.route_table_right_way",
            "module.network.aws_subnet.public_subnet_right_way",
            "module.network.aws_vpc.vpc_right_way"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_right_way",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:912611140120:subnet/subnet-0ed0dc083a6d279f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed0dc083a6d279f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "912611140120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-1"
            },
            "tags_all": {
              "Name": "Subnet-1"
            },
            "vpc_id": "vpc-03fa2e6b78d3211af"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.IG_right_way",
            "module.network.aws_vpc.vpc_right_way"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:912611140120:subnet/subnet-0209ea1f811630dee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0209ea1f811630dee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "912611140120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-2"
            },
            "tags_all": {
              "Name": "Subnet-2"
            },
            "vpc_id": "vpc-03fa2e6b78d3211af"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.IG_right_way",
            "module.network.aws_vpc.vpc_right_way"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_right_way",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:912611140120:vpc/vpc-03fa2e6b78d3211af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-027e4700bf629f09c",
            "default_route_table_id": "rtb-0d2cc0b7207328def",
            "default_security_group_id": "sg-0f6ead2b47b00588b",
            "dhcp_options_id": "dopt-0b952e2330582d4fd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03fa2e6b78d3211af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2cc0b7207328def",
            "owner_id": "912611140120",
            "tags": {
              "Name": "vpc_right_way"
            },
            "tags_all": {
              "Name": "vpc_right_way"
            }
          }
        }
      ]
    }
  ]
}